Ajout de swagger et function de logout
